# minnote

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Untitled.txt  lokkk.txt  notes_dir.txt  raa.txt  rrrrtt.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
